--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -1,16 +1,18 @@
 <template name='home'>
   <div class="ui main container">
-    {{#if isInRole 'owners'}}
+    {{#if isSellerOrOwnerRole}}
       <div class="ui raised center aligned segment">
         <h3 class="ui header">Bienvenue sur votre allofid</h3>
         {{#if isMobile}}
-        <button class="ui button fluid teal" data-action="scan">Scanner un code client</button>
+        <button class="ui button fluid positive" data-action="scan">Scanner un code client</button>
         <br>
         {{/if}}
-        <a class="ui button fluid positive" href="{{pathFor 'scanned' type='userId'}}">Gérez vos clients</a>
+        <a class="ui button fluid teal" href="{{pathFor 'customers'}}">Gérez vos clients</a>
         <br>
+        {{#if isInRole 'owners'}}
         <a class="ui button fluid blue" href="{{pathFor 'myPlaces'}}">Gérez vos commerces</a>
         <br>
+        {{/if}}
         <a class="ui button fluid" href="{{pathFor 'contact'}}">Besoin d'aide ?</a>
       </div>
     {{/if}}
