--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -8,7 +8,7 @@
     </div>
     {{#unless isConnected}}
     <div class="right item" data-action="signIn">
-      <i class="big sign in icon"></i>
+      <i class="big user icon"></i>
     </div>
     {{else}}
     <div class="right item" data-action="profile">
