--- a/client/templates/loyaltyCards/loyaltyCards_template.html
+++ b/client/templates/loyaltyCards/loyaltyCards_template.html
@@ -25,7 +25,7 @@
             <i class="yellow star icon"></i>
             <div class="content">
               Vous n'avez pas encore de cartes de fidélité
-              <div class="sub header">Cherchez l'affichette <strong>allofid</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
+              <div class="sub header">Cherchez l'affiche <strong>allofid</strong> dans vos commerces habituels ou parlez en à votre commerçant. Merci ツ</div>
             </div>
           </h2>
         </div>
