--- a/client/templates/home/home_template.html
+++ b/client/templates/home/home_template.html
@@ -9,10 +9,8 @@
         {{/if}}
         <a class="ui button fluid teal" href="{{pathFor 'customers'}}">Gérez vos clients</a>
         <br>
-        {{#if isInRole 'owners'}}
         <a class="ui button fluid blue" href="{{pathFor 'myPlaces'}}">Gérez vos commerces</a>
         <br>
-        {{/if}}
         <a class="ui button fluid" href="{{pathFor 'contact'}}">Besoin d'aide ?</a>
       </div>
     {{/if}}
@@ -27,7 +25,7 @@
         <i class="yellow star icon" data-action="loyaltyCards"></i>
         <div class="content">
           Gérez vos cartes de fidélité et vos avoirs
-          <div class="sub header">Pour ne plus collectionner les cartes de fidelité, ni les petits papiers dans votre porte monnaie.</div>
+          <div class="sub header">{{baseline}}</div>
         </div>
       </h2>
       {{> loginText}}
