--- a/client/templates/imageEdit/imageEdit_template.html
+++ b/client/templates/imageEdit/imageEdit_template.html
@@ -1,6 +1,6 @@
 <template name='imageEdit'>
   <form id="uploadImage" action="" method="post" enctype="multipart/form-data" class="hidden">
-    <input type="file" name="imageFile" class="hidden" id="imageFile">
+    <input type="file" name="imageFile" class="hidden" id="imageFile" style="cursor: pointer;">
   </form>
   {{#if imageId}}
     <button class="ui right floated circular basic red icon button" data-action="deleteImage">
