--- a/client/templates/scanned/scanned_template.html
+++ b/client/templates/scanned/scanned_template.html
@@ -4,8 +4,15 @@
     {{#if place}}
       {{#if isSellerOrOwnerRole}}
         <h2 class="ui center aligned icon header">
-          <i class="blue user icon"></i>
+          {{#if customerImageId}}
+            {{> image imageId=customerImageId classNames='tiny circular centered'}}
+          {{else}}
+            <i class="blue user icon"></i>
+          {{/if}}
           <div class="content">
+            {{#if customerName}}
+              {{customerName}}<br>
+            {{/if}}
             {{customerEmail}}
             <div class="sub header">Dans le commerce {{place.name}}</div>
           </div>
