place phone and user profile

--- a/client/templates/_comons/header/header_template.html
+++ b/client/templates/_comons/header/header_template.html
@@ -12,7 +12,11 @@
     </div>
     {{else}}
     <div class="right item" data-action="profile">
-      <i class="big user icon"></i>
+      {{#if currentUser.profile.imageId}}
+        {{> image imageId=currentUser.profile.imageId classNames='avatar'}}
+      {{else}}
+        <i class="big user icon"></i>
+      {{/if}}
     </div>
     {{/unless}}
   </div>
