--- a/client/templates/profile/profile_template.html
+++ b/client/templates/profile/profile_template.html
@@ -4,7 +4,7 @@
       <a href="{{pathFor 'editProfile'}}" class="teal right floated ui circular icon button"><i class="pencil icon"></i></a><br>
       <h2 class="ui center aligned icon header">
         {{#if user.profile.imageId}}
-          {{> image imageId=user.profile.imageId classNames='tiny circular centered'}}
+          {{> image imageId=user.profile.imageId classNames='tiny rounded centered'}}
         {{else}}
           <i class="blue user icon"></i>
         {{/if}}
