--- a/client/templates/imageEdit/imageEdit_template.html
+++ b/client/templates/imageEdit/imageEdit_template.html
@@ -7,6 +7,8 @@
       </i>
     </button>
   {{else}}
-    <input type="file" name="imageFile" id="imageFile" style="cursor: pointer;">
+    <div class="ui fluid input">
+      <input type="file" name="imageFile" id="imageFile" style="cursor: pointer;" placeholder="Photo carrée">
+    </div>
   {{/if}}
 </template>
