publish cards and vouchers

--- a/client/templates/about/about_template.html
+++ b/client/templates/about/about_template.html
@@ -30,6 +30,7 @@
           <div class="sub header">ou parlez en à vos commerçants favoris. Merci ツ</div>
         </div>
       </h2>
+      <a class="ui button fluid" href="{{pathFor 'contact'}}">Contact</a>
     </div>
   </div>
 </template>
