--- a/client/templates/contact/contact_template.html
+++ b/client/templates/contact/contact_template.html
@@ -1,6 +1,6 @@
 <template name='contact'>
   <div class="ui main container">
-    <h2 class="ui header">Contact</h2>
+    <h2 class="ui header">Contactez l'équipe allofid</h2>
     {{#autoForm id="contact" type="insert" collection="Contacts" enctype="multipart/form-data" doc=this}}
       {{> afQuickField placeholder="schemaLabel" name="name"}}
       {{> afQuickField placeholder="schemaLabel" name="email" value=email}}
