--- a/client/templates/card/card_template.html
+++ b/client/templates/card/card_template.html
@@ -11,7 +11,7 @@
       {{#if isQrCode}}
         {{> QrCode text=code classNames="large centered"}}
       {{else}}
-        <canvas class="ui large centered image" id="barcode-canvas"></canvas>
+        <canvas class="ui image" id="barcode-canvas" width="300" height="100"></canvas>
       {{/if}}
       <h5 class="ui header">{{code}}</h5>
       <p>
