--- a/client/templates/place/place_template.html
+++ b/client/templates/place/place_template.html
@@ -1,6 +1,6 @@
 <template name='place'>
   <div class="ui main container">
-    {{#if isSellerOrOwnerRole}}
+    {{#if isSellerOrOwner}}
     <div class="ui raised segment">
       {{#if isOwner}}
         <a href="{{pathFor 'placeEdit' placeId=_id}}" class="teal right floated ui circular icon button"><i class="pencil icon"></i></a>
@@ -55,7 +55,7 @@
           <div class="item">
             <i class="map marker icon"></i>
             <div class="content">
-              <a class="header">{{street}}</a>
+              <a class="header placeMap">{{street}}</a>
               <div class="description">{{zip}} {{city}}</div>
             </div>
           </div>
