better money format and search fix

--- a/client/templates/histories/histories_template.html
+++ b/client/templates/histories/histories_template.html
@@ -11,7 +11,7 @@
         <div class="event">
           <div class="content">
             <div class="summary">
-              {{plusSign what}}
+              {{{plusSign what}}}
               <div class="date">
                 {{fromNow when}}
               </div>
