--- a/client/templates/calc/calc_template.html
+++ b/client/templates/calc/calc_template.html
@@ -33,7 +33,7 @@
           </div>
         </div>
       </div>
-      <h2 class="ui right aligned header">Avoir : {{formatMoney voucher}}</h2>
+      <h2 class="ui right aligned header">Avoir : {{{formatMoney voucher}}}</h2>
       <button class="fluid ui button">recalculer</button>
     </div>
   </div>
