--- a/client/templates/placeEdit/placeEdit_template.html
+++ b/client/templates/placeEdit/placeEdit_template.html
@@ -19,7 +19,7 @@
       <div class="loyaltyCard">
         {{#if loyaltyCard.pointCost}}
         <p style="text-align: justify;text-justify: inter-word;">
-          Chaque tranche d'achat de {{formatMoney loyaltyCard.pointCost}} ajoute 1 point à la carte de fidélité. Quand la carte du client atteint {{loyaltyCard.size}} points, il reçoit automatiquement un avoir de {{formatMoney loyaltyCard.voucherValue}} et le compte de points est remis a zéro.
+          Chaque tranche d'achat de {{{formatMoney loyaltyCard.pointCost}}} ajoute 1 point à la carte de fidélité. Quand la carte du client atteint {{loyaltyCard.size}} points, il reçoit automatiquement un avoir de {{{formatMoney loyaltyCard.voucherValue}}} et le compte de points est remis a zéro.
         </p>
         {{/if}}
         {{> afQuickField defaultValue="10" name="loyaltyCard.pointCost"}}
