--- a/client/templates/cardsBrands/cardsBrands_template.html
+++ b/client/templates/cardsBrands/cardsBrands_template.html
@@ -7,7 +7,7 @@
         <div class="ui middle aligned animated list">
           {{#each cardsBrands}}
           <div class="item">
-            {{> image imageId=imageId classNames='mini'}}
+            {{> image imageId=imageId classNames='mini rounded'}}
             <div class="content">
               <a class="header" href="{{pathFor 'cardBrand' cardBrandId=_id}}">{{name}} <small>{{baseline}}</small></a>
               <div class="description"><small>Mise à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}</small></div>
