--- a/client/templates/vouchers/vouchers_template.html
+++ b/client/templates/vouchers/vouchers_template.html
@@ -4,7 +4,11 @@
     <div class="ui relaxed divided list">
       {{#each vouchers}}
       <div class="item">
-        <i class="large blue ticket icon"></i>
+        {{#if imageId}}
+          {{> image imageId=imageId classNames='mini rounded'}}
+        {{else}}
+          <i class="large blue ticket icon"></i>
+        {{/if}}
         <div class="content">
           <a class="header" href="{{pathFor 'place' placeId=placeId}}">{{name}}</a>
           <div class="description">{{{formatMoney value}}} <small>Mis à jour {{#if updatedAt}}{{fromNow updatedAt}}{{else}}{{fromNow createdAt}}{{/if}}</small></div>
