--- a/client/templates/addCard/addCard_template.html
+++ b/client/templates/addCard/addCard_template.html
@@ -11,6 +11,7 @@
       {{> afQuickField placeholder="schemaLabel" name="points"}}
       {{> afQuickField placeholder="schemaLabel" name="notes" id="cardNotes"}}
       {{> afQuickField  name="imageId" class="hidden" id="imageId"}}
+      {{> afQuickField  name="cardBrandId" class="hidden" id="cardBrandId"}}
       <button class="fluid ui positive button" type="submit">Enregistrer</button>
       <a class="fluid ui button" href="{{pathFor 'loyaltyCards'}}">Annuler</a>
     {{/autoForm}}
