--- a/client/templates/customers/customers_template.html
+++ b/client/templates/customers/customers_template.html
@@ -27,6 +27,7 @@
           </div>
           {{/each}}
         </div>
+        <a class="ui button fluid teal" href="{{pathFor 'promotions' placeId=_id}}">Gérer vos promotions</a>
       {{else}}
         <h2 class="ui center aligned icon header">
           <i class="blue users icon"></i>
